增加了通知消息的方法。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ResultActivity"/>
+
+        <service android:name=".SendService" android:enabled="true" android:exported="true"/>
     </application>
 
 </manifest>
